# gvf

./: .gitignore  CMakeLists.txt
osc/: CMakeLists.txt  DOCUMENTATION.txt  gvfosc.cpp  gvfosc.h
osc/supercollider/: gvf.scd
puredata/: gvf.cpp
src/: CMakeLists.txt
